src/documents/styles.css.less
@import (less) "../../vendor/dead-simple-grid/css/grid.css";

.container {
  max-width: 70em;
  margin-left: auto;
  margin-right: auto;
}

@code-font: Monaco, Courier New, monospace;

body {
  background: white;
  border-top: 3px solid black;
  margin: 0;
  font-family: Georgia;
  font-size: 1.1em;
}

a {
  color: darken(yellow, 20%);
  text-decoration: none;
}

#fork-me {
  position: absolute;
  left: 0;
  top: 0;
  background: url('/images/fork-me.png') no-repeat;
  width: 141px;
  height: 141px;
  text-indent: -500px;
}

#logo {
  font-family: @code-font;
  text-align: center;
  font-size: 4em;
  font-weight: normal;
  margin-bottom: 0;
  line-height: normal;

  a {
    color: inherit;

    .posts-counter {
      font-size: 50%;
      color: silver;
      vertical-align: super;
    }
  }
}

#sub-title {
  text-align: center;
  margin-bottom: 2em;
}

article {
  max-width: 100%;

  > header {
    margin: 3em 0 1em 0;

    h2 {
      font-family: @code-font;
      font-weight: normal;
      font-size: 3em;
      margin: 0;
      display: inline-block;

      a {
        text-decoration: none;
        color: #000;
      }
    }

    .meta {
      color: silver;
      font-size: 0.8em;

      .comments {
        margin-left: .5em;
      }

      .github-stars {
        font-family: @code-font;
        display: inline-block;
        width: auto;
        height: auto;
        padding: .1em .3em;
        background: silver;
        color: white;
        margin-left: .5em;
        border-radius: 2px;
        text-shadow: 0px 1px 1px rgba(0,0,0,.3);
        line-height: normal;

        &:before {
          content: '★';
          margin: 0 .2em 0;
        }
      }
    }
  }

  .content {
    line-height: 150%;

    table {
      border-collapse: collapse;

      thead tr {
        border-bottom: 2px solid gray;
        background-color: #f0f0f0;
      }

      tbody tr:nth-child(even) {
        background-color: #f0f0f0;
      }
    }

    .overflow {
      overflow-x: scroll;
    }

    .highlight {
      padding: .7em 1em;
      border: 1px solid silver;
      border-radius: 3px;
      box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.2);
      background: lightyellow;
      overflow: hidden;
      margin-bottom: 1em;

      img {
        float: right;
        margin-left: 1em;
      }
    }
  }

  &:first-child > header {
    margin-top: 0;
  }

  pre, code {
    font-family: @code-font;
    font-size: .95em;
    line-height: normal;
  }

  pre {
    background-color: #333;
    padding: .8em 1em;
    color: #fff;
    border-radius: 2px;

    code {
      background: none;
      padding: 0;
      margin: 0;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: 100%;
      display: block;
      line-height: inherit;
    }
  }

  code {
    background: #e0e0e0;
    padding: 0 0.3em;
  }

  blockquote {
    padding: 0 0 0 1em;
    quotes: "“" "“" "“" "“";
    position: relative;

    &:before {
      content: open-quote;
      position: absolute;
      font-size: 5em;
      right: 100%;
      top: 0;
      line-height: 1em;
      color: silver;
    }
  }

  ul {
    padding-left: 1.5em;
  }

  strong {
    font-weight: bold;
  }
}

.pagination {
  ul {
    list-style-type: none;
    margin: 2em 0;
    padding: 0;
    text-align: center;

    li {
      display: inline-block;

      & + li {
        margin-left: 1em;
      }
    }
  }
}

aside {
  h4 {
    margin-bottom: 0;
  }

  .other-posts {
    > div {
      display: block;
      text-overflow: ellipsis;
      max-width: 100%;
      white-space: nowrap;
      overflow: auto;
    }

    a {
      &.current {
        color: #000;
      }

      &.partner {
        background-position: 100% 0;
        background-repeat: no-repeat;
        background-size: contain;
        padding-right: 30px !important;

        &.nodejitsu {
          background-image: url(/images/nodejitsu.png);
        }
      }
    }
  }

  .feedburner {
    margin-bottom: 1em;
  }
}

footer {
  clear: both;
}

@media only screen and (min-width: 34em) {
}

@media only screen and (max-width: 550px) {
  #logo {
    font-size: 150%;
  }

  .hide-on-mobile {
    display: none;
  }

  article {
    > header {
      h2 {
        font-size: 150%;
      }

      .meta .github-stars {
        display: none;
      }
    }

    code, pre {
      font-size: .85em;
    }

    blockquote {
      padding-left: 0.5em;
    }
  }
}

@media only screen and (min-width: 54em) {
  .main { width: 66.66% !important; }
  aside { width: 33.33% !important; }
}

@media only screen and (min-width: 76em) {
  .main { width: 75% !important; }
  aside { width: 25% !important; }
}

// single colum
// .main { width: 100% !important; }

